add in meta tags and analytics

--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
     <meta name="description" content="Has it come home?">
     <meta name="author" content="Bouge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#c0392b">
     <link rel="stylesheet" href="css/style.css?v=1.0">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="https://hasitcomehome.com">
+    <meta name="twitter:title" content="Has it Come Home?">
+    <meta name="twitter:description" content="Has football home home yet?
+Not yet, but it's on the way!!">
+    <meta name="twitter:image" content="https://hasitcomehome.com/bg.jpg">
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="Has it come home?">
+    <meta property="og:site_name" content="Not yet, but it's coming...">
+    <meta property="og:url" content="https://hasitcomehome.com">
+    <meta property="og:image" content="https://hasitcomehome.com/bg.jpg">
     <link rel="icon"
           type="image/png"
           href="favicon.png">
@@ -16,6 +28,16 @@
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
     <![endif]-->
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122186002-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-122186002-1');
+    </script>
 </head>
 
 <body>
