update meta tags

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <meta name="twitter:site" content="https://hasitcomehome.com">
     <meta name="twitter:title" content="Has it Come Home?">
     <meta name="twitter:description" content="Has football home home yet?
-Not yet, but it's on the way!!">
+Not yet, but it's coming...">
     <meta name="twitter:image" content="https://hasitcomehome.com/bg.jpg">
     <meta property="og:type" content="article">
-    <meta property="og:title" content="Has it come home?">
-    <meta property="og:site_name" content="Not yet, but it's coming...">
+    <meta property="og:title" content="Not yet, but it's coming...">
+    <meta property="og:site_name" content="Has it come home?">
     <meta property="og:url" content="https://hasitcomehome.com">
     <meta property="og:image" content="https://hasitcomehome.com/bg.jpg">
     <link rel="icon"
