add manifest.json link

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
 
     <title>Has it come home?</title>
+    <link rel="manifest" href="/manifest.json"/>
     <meta name="description" content="Has it come home?">
     <meta name="author" content="Bouge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
