--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="https://hasitcomehome.com">
     <meta name="twitter:title" content="Has it Come Home?">
-    <meta name="twitter:description" content="Has football home home yet?
+    <meta name="twitter:description" content="Has football come home yet?
 Not yet, but it's coming...">
     <meta name="twitter:image" content="https://hasitcomehome.com/bg.jpg">
     <meta property="og:type" content="article">
