--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Bouge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#c0392b">
-    <link rel="stylesheet" href="css/style.css?v=1.0">
+    <link rel="stylesheet" href="css/style.css?v=2.0">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="https://hasitcomehome.com">
     <meta name="twitter:title" content="Has it Come Home?">
@@ -34,7 +34,11 @@ Not yet, but it's coming...">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122186002-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
         gtag('js', new Date());
 
         gtag('config', 'UA-122186002-1');
@@ -44,12 +48,10 @@ Not yet, but it's coming...">
 <body>
 <div class="hero">
     <div class="hero-cover">
-            <h2>Not yet, but it's coming...<br/>
-                <iframe src="https://open.spotify.com/embed/track/1b7kLkJkr6XRYgWqVmDm05" width="310" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></h2>
-        <br/>
-        <div style="display: block">
-
-        </div>
+        <h2>Not yet, but it's coming...<br/>
+            <iframe src="https://open.spotify.com/embed/track/1b7kLkJkr6XRYgWqVmDm05" width="310" height="80"
+                    frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        </h2>
     </div>
 </div>
 <h1>Has it come home?</h1>
@@ -59,7 +61,7 @@ Not yet, but it's coming...">
 </footer>
 
 <script>
-    if('serviceWorker' in navigator) {
+    if ('serviceWorker' in navigator) {
         navigator.serviceWorker.register('/sw.js');
     }
 </script>
