add time to KO or match time

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Bouge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#c0392b">
-    <link rel="stylesheet" href="css/style.css?v=4.0">
+    <link rel="stylesheet" href="css/style.css?v=5.0">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="https://hasitcomehome.com">
     <meta name="twitter:title" content="Has it Come Home?">
@@ -49,6 +49,8 @@ Not yet, but it's coming...">
 <div class="hero">
     <div class="hero-cover">
         <h2>Not yet, but it's coming...<br/>
+            <br/>
+            <span id="ko"></span> <br/>
             <span id="score"></span>
             <br/>
             <iframe src="https://open.spotify.com/embed/track/1b7kLkJkr6XRYgWqVmDm05" width="310" height="80"
@@ -64,9 +66,9 @@ Not yet, but it's coming...">
 
 <script>
     if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('/sw.js?v=4.0');
+        navigator.serviceWorker.register('/sw.js?v=5.0');
     }
 </script>
-<script src="script.js?v=4.0"></script>
+<script src="script.js?v=5.0"></script>
 </body>
 </html>
