--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Bouge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#c0392b">
-    <link rel="stylesheet" href="css/style.css?v=5.0">
+    <link rel="stylesheet" href="css/style.css?v=6.0">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="https://hasitcomehome.com">
     <meta name="twitter:title" content="Has it Come Home?">
@@ -48,10 +48,11 @@ Not yet, but it's coming...">
 <body>
 <div class="hero">
     <div class="hero-cover">
-        <h2>Not yet, but it's coming...<br/>
+        <h2>Not yet, but it's coming...It's close, oh so close.<br/>
             <br/>
             <span id="ko"></span> <br/>
-            <span id="score"></span>
+            <span id="score"></span><br/>
+            <img id="touching-distance" src="touching_distance.png" width="60%" alt="it's within touchign distance" />
             <br/>
             <iframe src="https://open.spotify.com/embed/track/1b7kLkJkr6XRYgWqVmDm05" width="310" height="80"
                     frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
@@ -66,9 +67,9 @@ Not yet, but it's coming...">
 
 <script>
     if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('/sw.js?v=5.0');
+        navigator.serviceWorker.register('/sw.js?v=6.0');
     }
 </script>
-<script src="script.js?v=5.0"></script>
+<script src="script.js?v=6.0"></script>
 </body>
 </html>
