it's not coming home

--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@ Not yet, but it's coming...">
 <body>
 <div class="hero">
     <div class="hero-cover">
-        <h2>Not yet, but it's coming...<br/>
-            <br/>
+        <h2>No...<br/>Join us again for Euro 2020!
+            <!--<br/>
             <span id="ko"></span> <br/>
             <span id="score"></span>
             <br/>
             <iframe src="https://open.spotify.com/embed/track/1b7kLkJkr6XRYgWqVmDm05" width="310" height="80"
-                    frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                    frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe> -->
         </h2>
     </div>
 </div>
@@ -69,6 +69,6 @@ Not yet, but it's coming...">
         navigator.serviceWorker.register('/sw.js?v=5.0');
     }
 </script>
-<script src="script.js?v=5.0"></script>
+<!-- <script src="script.js?v=5.0"></script> -->
 </body>
 </html>
