update meta data

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="https://hasitcomehome.com">
     <meta name="twitter:title" content="Has it Come Home?">
-    <meta name="twitter:description" content="Has football come home yet?
-Not yet, but it's coming...">
+    <meta name="twitter:description" content="Has football come home?
+No.">
     <meta name="twitter:image" content="https://hasitcomehome.com/bg.jpg">
     <meta property="og:type" content="article">
-    <meta property="og:title" content="Not yet, but it's coming...">
+    <meta property="og:title" content="No">
     <meta property="og:site_name" content="Has it come home?">
     <meta property="og:url" content="https://hasitcomehome.com">
     <meta property="og:image" content="https://hasitcomehome.com/bg.jpg">
