update to Euro 2020

--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
     <meta name="author" content="Bouge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#c0392b">
-    <link rel="stylesheet" href="css/style.css?v=5.0">
+    <link rel="stylesheet" href="css/style.css?v=6.0">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="https://hasitcomehome.com">
     <meta name="twitter:title" content="Has it Come Home?">
     <meta name="twitter:description" content="Has football come home?
 No.">
-    <meta name="twitter:image" content="https://hasitcomehome.com/bg.jpg">
+    <meta name="twitter:image" content="https://hasitcomehome.com/bg_2020_2.jpg">
     <meta property="og:type" content="article">
     <meta property="og:title" content="No">
     <meta property="og:site_name" content="Has it come home?">
     <meta property="og:url" content="https://hasitcomehome.com">
-    <meta property="og:image" content="https://hasitcomehome.com/bg.jpg">
+    <meta property="og:image" content="https://hasitcomehome.com/bg_2020_2.jpg">
     <link rel="icon"
           type="image/png"
           href="favicon.png">
@@ -48,7 +48,7 @@ No.">
 <body>
 <div class="hero">
     <div class="hero-cover">
-        <h2>No...<br/>Join us again for Euro 2020!
+        <h2>Not yet, but it's coming...<br/>
             <!--<br/>
             <span id="ko"></span> <br/>
             <span id="score"></span>
@@ -66,9 +66,9 @@ No.">
 
 <script>
     if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('/sw.js?v=5.0');
+        navigator.serviceWorker.register('/sw.js?v=6.0');
     }
 </script>
-<!-- <script src="script.js?v=5.0"></script> -->
+<!-- <script src="script.js?v=6.0"></script> -->
 </body>
 </html>
