--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@ No.">
 <body>
 <div class="hero">
     <div class="hero-cover">
-        <h2>Not yet, but it's coming...<br/>
+        <h2>Yes<br/>
+            Huge congratulations to the Lionesses!
             <!--<br/>
             <span id="ko"></span> <br/>
             <span id="score"></span>
